# python-project-template

./: .pre-commit-config.yaml  README.md  cookiecutter.json
{{ cookiecutter.repo_name }}/: pyproject.toml
