[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "0.1.0"
description = ""
authors = ["{{ cookiecutter.authors }}"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.272"
pre-commit = "^3.3.3"
black = "^23.3.0"
mypy = "^1.3.0"
pytest = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 79

[tool.ruff]
target-version = "py310"
line-length = 79
select = [
  "F",
  "E",
  "W",
  "I",
  "N",
  "D",
  "UP",
  "YTT",
  "ANN",
  "S",
  "BLE",
  "FBT",
  "B",
  "A",
  "C4",
  "DTZ",
  "T10",
  "ICN",
  "INP",
  "PIE",
  "T20",
  "PT",
  "Q",
  "RSE",
  "RET",
  "SLF",
  "SIM",
  "TCH",
  "ARG",
  "PTH",
  "ERA",
  "PL",
  "TRY",
  "RUF",
]

[tool.ruff.pycodestyle]
max-doc-length = 79
